--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.1",
-    "pg": "^8.17.2"
+    "fastify-type-provider-zod": "^6.1.0",
+    "pg": "^8.17.2",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.0.10",
