--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "fastify-drizzle-app",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Fastify TypeScript & drizzle repository",
   "type": "module",
-  "engines": {
-    "node": ">=24.0.0"
-  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development node --watch src/index.ts",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -16,6 +13,8 @@
     "db:push": "drizzle-kit push",
     "db:pull": "drizzle-kit pull",
     "db:studio": "drizzle-kit studio",
+    "release": "standard-version",
+    "release:dry-run": "standard-version --dry-run",
     "typecheck": "tsc --noEmit"
   },
   "license": "MIT",
@@ -30,12 +29,13 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@types/node": "^25.0.10",
+    "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
     "fastify-tsconfig": "^3.0.0",
     "prettier": "^3.8.1",
+    "standard-version": "^9.5.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
