--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "fastify": "^5.7.1",
     "fastify-type-provider-zod": "^6.1.0",
     "pg": "^8.17.2",
+    "qs": "^6.14.1",
     "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
+    "@types/qs": "^6.14.0",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
     "fastify-tsconfig": "^3.0.0",
