--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "better-auth": "^1.4.6",
     "dotenv": "^17.2.3",
