--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,17 +21,23 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "erasableSyntaxOnly": true,
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "paths": {
+      "#/*": [
+        "./src/*"
+      ]
+    }
   },
   "exclude": [
     "node_modules"
   ],
   "include": [
-    "./src/**/*.ts"
+    "src/**/*"
   ]
 }
