--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^8.4.1",
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/swagger": "^9.7.0",
@@ -27,7 +28,7 @@
     "better-auth": "^1.4.6",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
-    "fastify": "^5.7.1",
+    "fastify": "^5.7.4",
     "fastify-type-provider-zod": "^6.1.0",
     "pg": "^8.17.2",
     "qs": "^6.14.1",
