--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@asteasolutions/zod-to-openapi": "^8.4.1",
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "@fastify/swagger": "^9.7.0",
@@ -29,7 +28,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.7.4",
-    "fastify-type-provider-zod": "^6.1.0",
+    "fastify-zod-openapi": "^5.5.0",
     "pg": "^8.17.2",
     "qs": "^6.14.1",
     "zod": "^4.3.6"
